Added portal name in home page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <article id="content">
       <div class="wrapper">
         <div class="pad">
-          <h2>About <span>Our Wedding</span></h2>
+          <h2>About <span>Our Portal</span></h2>
           <figure class="img1"><img src="images/page1_img1.jpg" alt=""></figure>
           <p>This theme is one of free website templates created by TemplateMonster.com, optimized for 1024X768 screen resolution. It is also XHTML &amp; CSS valid. </p>
           <p>Wedding Template goes with two packages: with PSD source files and without them. PSD source files are available for free for the registered members of Templates.com. The basic package is available for anyone without registration.</p>
